--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc9687">  <td>22/11/25 10:34:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2Test.Tc2()[pri:0, instance:practice_test.Sample2Test@1f97cf0d]">Tc2</td> 
-  <td>main@501705927</td>   <td></td> </tr>
-<tr bgcolor="a9e4eb">  <td>22/11/25 10:34:07</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3Test.Tc3()[pri:0, instance:practice_test.Sample3Test@51f116b8]">Tc3</td> 
-  <td>main@501705927</td>   <td></td> </tr>
-<tr bgcolor="89dabe">  <td>22/11/25 10:34:07</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1Test.tc1()[pri:0, instance:practice_test.Sample1Test@19d481b]">tc1</td> 
-  <td>main@501705927</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>22/11/25 10:34:07</td>   <td>-57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample4Test.tc4()[pri:0, instance:practice_test.Sample4Test@44a7bfbc]">tc4</td> 
-  <td>main@501705927</td>   <td></td> </tr>
+<tr bgcolor="aceffd">  <td>22/11/25 11:50:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2Test.Tc2()[pri:0, instance:practice_test.Sample2Test@156b88f5]">Tc2</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="a487af">  <td>22/11/25 11:50:37</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1Test.tc1()[pri:0, instance:practice_test.Sample1Test@25084a1e]">tc1</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="677d7f">  <td>22/11/25 11:50:37</td>   <td>-73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample4Test.tc4()[pri:0, instance:practice_test.Sample4Test@14555e0a]">tc4</td> 
+  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>22/11/25 11:50:37</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3Test.Tc3()[pri:0, instance:practice_test.Sample3Test@bd4dc25]">Tc3</td> 
+  <td>main@696933920</td>   <td></td> </tr>
 </table>
